parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:


Grammar

Rule 0     S' -> create_tables
Rule 1     create_tables -> create_table
Rule 2     create_tables -> create_tables create_table
Rule 3     create_table -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON
Rule 4     column_definitions -> column_definition
Rule 5     column_definitions -> column_definition COMMA column_definitions
Rule 6     column_definition -> ID TYPE
Rule 7     column_definition -> ID TYPE NULL
Rule 8     column_definition -> ID TYPE PRIMARY KEY
Rule 9     column_definition -> ID TYPE DEFAULT expression
Rule 10    column_definition -> ID TYPE REFERENCES ID
Rule 11    column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN
Rule 12    expression -> ID
Rule 13    expression -> NUMBER
Rule 14    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

CASCADE              : 
CHECK                : 
COMMA                : 5
CREATE               : 3
DATE                 : 
DEFAULT              : 9
DELETE               : 
EQUAL                : 
FOREIGN              : 11
GREATER              : 
ID                   : 3 6 7 8 9 10 10 11 11 11 12
IN                   : 
KEY                  : 8 11
LPAREN               : 3 11 11 14
NULL                 : 7
NUMBER               : 13
ON                   : 
PRIMARY              : 8
REFERENCES           : 10 11
RPAREN               : 3 11 11 14
SEMICOLON            : 3
SET                  : 
TABLE                : 3
TIME                 : 
TYPE                 : 6 7 8 9 10
UNIQUE               : 
UPDATE               : 
error                : 

Nonterminals, with rules where they appear

column_definition    : 4 5
column_definitions   : 3 5
create_table         : 1 2
create_tables        : 2 0
expression           : 9 14


state 0

    (0) S' -> . create_tables
    (1) create_tables -> . create_table
    (2) create_tables -> . create_tables create_table
    (3) create_table -> . CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON

    CREATE          shift and go to state 3

    create_tables                  shift and go to state 1
    create_table                   shift and go to state 2

state 1

    (0) S' -> create_tables .
    (2) create_tables -> create_tables . create_table
    (3) create_table -> . CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON

    CREATE          shift and go to state 3

    create_table                   shift and go to state 4

state 2

    (1) create_tables -> create_table .

    CREATE          reduce using rule 1 (create_tables -> create_table .)
    $end            reduce using rule 1 (create_tables -> create_table .)


state 3

    (3) create_table -> CREATE . TABLE ID LPAREN column_definitions RPAREN SEMICOLON

    TABLE           shift and go to state 5


state 4

    (2) create_tables -> create_tables create_table .

    CREATE          reduce using rule 2 (create_tables -> create_tables create_table .)
    $end            reduce using rule 2 (create_tables -> create_tables create_table .)


state 5

    (3) create_table -> CREATE TABLE . ID LPAREN column_definitions RPAREN SEMICOLON

    ID              shift and go to state 6


state 6

    (3) create_table -> CREATE TABLE ID . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 7


state 7

    (3) create_table -> CREATE TABLE ID LPAREN . column_definitions RPAREN SEMICOLON
    (4) column_definitions -> . column_definition
    (5) column_definitions -> . column_definition COMMA column_definitions
    (6) column_definition -> . ID TYPE
    (7) column_definition -> . ID TYPE NULL
    (8) column_definition -> . ID TYPE PRIMARY KEY
    (9) column_definition -> . ID TYPE DEFAULT expression
    (10) column_definition -> . ID TYPE REFERENCES ID
    (11) column_definition -> . FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN

    ID              shift and go to state 8
    FOREIGN         shift and go to state 11

    column_definitions             shift and go to state 9
    column_definition              shift and go to state 10

state 8

    (6) column_definition -> ID . TYPE
    (7) column_definition -> ID . TYPE NULL
    (8) column_definition -> ID . TYPE PRIMARY KEY
    (9) column_definition -> ID . TYPE DEFAULT expression
    (10) column_definition -> ID . TYPE REFERENCES ID

    TYPE            shift and go to state 12


state 9

    (3) create_table -> CREATE TABLE ID LPAREN column_definitions . RPAREN SEMICOLON

    RPAREN          shift and go to state 13


state 10

    (4) column_definitions -> column_definition .
    (5) column_definitions -> column_definition . COMMA column_definitions

    RPAREN          reduce using rule 4 (column_definitions -> column_definition .)
    COMMA           shift and go to state 14


state 11

    (11) column_definition -> FOREIGN . KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN

    KEY             shift and go to state 15


state 12

    (6) column_definition -> ID TYPE .
    (7) column_definition -> ID TYPE . NULL
    (8) column_definition -> ID TYPE . PRIMARY KEY
    (9) column_definition -> ID TYPE . DEFAULT expression
    (10) column_definition -> ID TYPE . REFERENCES ID

    COMMA           reduce using rule 6 (column_definition -> ID TYPE .)
    RPAREN          reduce using rule 6 (column_definition -> ID TYPE .)
    NULL            shift and go to state 16
    PRIMARY         shift and go to state 17
    DEFAULT         shift and go to state 18
    REFERENCES      shift and go to state 19


state 13

    (3) create_table -> CREATE TABLE ID LPAREN column_definitions RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 20


state 14

    (5) column_definitions -> column_definition COMMA . column_definitions
    (4) column_definitions -> . column_definition
    (5) column_definitions -> . column_definition COMMA column_definitions
    (6) column_definition -> . ID TYPE
    (7) column_definition -> . ID TYPE NULL
    (8) column_definition -> . ID TYPE PRIMARY KEY
    (9) column_definition -> . ID TYPE DEFAULT expression
    (10) column_definition -> . ID TYPE REFERENCES ID
    (11) column_definition -> . FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN

    ID              shift and go to state 8
    FOREIGN         shift and go to state 11

    column_definition              shift and go to state 10
    column_definitions             shift and go to state 21

state 15

    (11) column_definition -> FOREIGN KEY . LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN

    LPAREN          shift and go to state 22


state 16

    (7) column_definition -> ID TYPE NULL .

    COMMA           reduce using rule 7 (column_definition -> ID TYPE NULL .)
    RPAREN          reduce using rule 7 (column_definition -> ID TYPE NULL .)


state 17

    (8) column_definition -> ID TYPE PRIMARY . KEY

    KEY             shift and go to state 23


state 18

    (9) column_definition -> ID TYPE DEFAULT . expression
    (12) expression -> . ID
    (13) expression -> . NUMBER
    (14) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 27

    expression                     shift and go to state 25

state 19

    (10) column_definition -> ID TYPE REFERENCES . ID

    ID              shift and go to state 28


state 20

    (3) create_table -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON .

    CREATE          reduce using rule 3 (create_table -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON .)
    $end            reduce using rule 3 (create_table -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON .)


state 21

    (5) column_definitions -> column_definition COMMA column_definitions .

    RPAREN          reduce using rule 5 (column_definitions -> column_definition COMMA column_definitions .)


state 22

    (11) column_definition -> FOREIGN KEY LPAREN . ID RPAREN REFERENCES ID LPAREN ID RPAREN

    ID              shift and go to state 29


state 23

    (8) column_definition -> ID TYPE PRIMARY KEY .

    COMMA           reduce using rule 8 (column_definition -> ID TYPE PRIMARY KEY .)
    RPAREN          reduce using rule 8 (column_definition -> ID TYPE PRIMARY KEY .)


state 24

    (12) expression -> ID .

    COMMA           reduce using rule 12 (expression -> ID .)
    RPAREN          reduce using rule 12 (expression -> ID .)


state 25

    (9) column_definition -> ID TYPE DEFAULT expression .

    COMMA           reduce using rule 9 (column_definition -> ID TYPE DEFAULT expression .)
    RPAREN          reduce using rule 9 (column_definition -> ID TYPE DEFAULT expression .)


state 26

    (13) expression -> NUMBER .

    COMMA           reduce using rule 13 (expression -> NUMBER .)
    RPAREN          reduce using rule 13 (expression -> NUMBER .)


state 27

    (14) expression -> LPAREN . expression RPAREN
    (12) expression -> . ID
    (13) expression -> . NUMBER
    (14) expression -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 27

    expression                     shift and go to state 30

state 28

    (10) column_definition -> ID TYPE REFERENCES ID .

    COMMA           reduce using rule 10 (column_definition -> ID TYPE REFERENCES ID .)
    RPAREN          reduce using rule 10 (column_definition -> ID TYPE REFERENCES ID .)


state 29

    (11) column_definition -> FOREIGN KEY LPAREN ID . RPAREN REFERENCES ID LPAREN ID RPAREN

    RPAREN          shift and go to state 31


state 30

    (14) expression -> LPAREN expression . RPAREN

    RPAREN          shift and go to state 32


state 31

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN . REFERENCES ID LPAREN ID RPAREN

    REFERENCES      shift and go to state 33


state 32

    (14) expression -> LPAREN expression RPAREN .

    COMMA           reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 14 (expression -> LPAREN expression RPAREN .)


state 33

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES . ID LPAREN ID RPAREN

    ID              shift and go to state 34


state 34

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID . LPAREN ID RPAREN

    LPAREN          shift and go to state 35


state 35

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN . ID RPAREN

    ID              shift and go to state 36


state 36

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID . RPAREN

    RPAREN          shift and go to state 37


state 37

    (11) column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN .

    COMMA           reduce using rule 11 (column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN .)
    RPAREN          reduce using rule 11 (column_definition -> FOREIGN KEY LPAREN ID RPAREN REFERENCES ID LPAREN ID RPAREN .)

